--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name": "burzum/hex-cake",
+    "name": "burzum/hexagonal-cake",
     "description": "Hexagonal CakePHP Application Skeleton",
     "type": "project",
     "require": {
         "php": ">=7.1",
         "psr/container": "^1.0",
         "cakephp/cakephp": "^3.6",
+        "cakephp/plugin-installer": "^1.1",
         "league/container": "^2.4",
-        "cakephp/plugin-installer": "^1.1"
+        "league/tactician": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
         "cakephp/debug_kit": "^3.15",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "twig/twig": "^2.0"
     },
     "license": "MIT",
     "authors": [
